Add services and reorganize project structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,16 @@
 <main class="main">
     
+    <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="end">
+        <mat-tab label="First">
+            <app-site-about />
+        </mat-tab>
+        <mat-tab label="Second">
+
+        </mat-tab>
+        <mat-tab label="Third">
+
+        </mat-tab>
+    </mat-tab-group>
 </main>
 
 <router-outlet />
