Add theme and typography

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main class="main">
     
-    <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="end">
+    <mat-tab-group class="cv-cards" mat-stretch-tabs="false" mat-align-tabs="end">
         <mat-tab label="First">
             <app-site-about />
         </mat-tab>
@@ -10,7 +10,12 @@
         <mat-tab label="Third">
 
         </mat-tab>
+
     </mat-tab-group>
+
+    <button class="dark-mode-btn" mat-fab color="primary" aria-label="Toggle dark theme">
+        <mat-icon>{{ useDarkMode ? 'wb_sunny' : 'nights_stay' }}</mat-icon>
+    </button>
 </main>
 
 <router-outlet />
