--- a/src/app/components/main-banner/main-banner.component.html
+++ b/src/app/components/main-banner/main-banner.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="mat-typography">
     <h2>Hello there. I'm</h2>
     <h1>{{ name }}</h1>
     <h1>I build {{ sentences[2] }}</h1>
