--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,8 +1,15 @@
 @use '@angular/material' as mat;
+
+/* import components to theme: */
+
+@use '../app/components/menu/menu.component.scss' as menu-component;
+
+/* end */
+
 @include mat.core();
 
 $cv-typography: mat.define-typography-config(
-    $font-family: 'Georgia',
+    $font-family: 'Raleway',
     /*$headline-1: mat.define-typography-level(112px, 112px, 300, $letter-spacing: -0.05em),
     $headline-2: mat.define-typography-level(56px, 56px, 400, $letter-spacing: -0.02em),
     $headline-3: mat.define-typography-level(45px, 48px, 400, $letter-spacing: -0.005em),
@@ -18,16 +25,20 @@ $cv-typography: mat.define-typography-config(
 );
 
 
-$my-primary: mat.define-palette(mat.$indigo-palette, 500);
-$my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$primary: mat.define-palette(mat.$indigo-palette, 500);
+$accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
-$my-theme: mat.define-light-theme((
+$cv-theme: mat.define-dark-theme((
     color: (
-        primary: $my-primary,
-        accent: $my-accent,
+        primary: $primary,
+        accent: $accent,
     ),
-    typography: $cv-typography,
+    typography: mat.define-typography-config(),
 ));
 
-@include mat.core-theme($my-theme);
+@include mat.all-component-themes($cv-theme);
 @include mat.typography-hierarchy($cv-typography);
+
+/* Theming components */
+
+@include menu-component.theme($cv-theme);
