Migrate app from standalone to module

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,4 +1,4 @@
 <div id="menu-container">
-    <a class="button" routerLink="/" routerLinkActive="active">about me</a>
-    <a class="button" routerLink="/qualifications" routerLinkActive="active">qualifications</a>
+    <a routerLink="/" routerLinkActive="active">about me</a>
+    <a routerLink="/qualifications" routerLinkActive="active">qualifications</a>
 </div>
