--- a/src/app/components/site-about/site-about.component.html
+++ b/src/app/components/site-about/site-about.component.html
@@ -1,6 +1,5 @@
-<!--<app-main-banner name="Test Testinger" [sentences]="['A', 'B', 'C']" />-->
 <div class="site-content">
-    <h1 id="welcome-text">Welcome</h1>
+    <h1 id="welcome-text">{{ 'staticText.welcome' | translate }}</h1>
     <app-sidelined-paragraph>
         Lorem ipsum dolor sit amet
     </app-sidelined-paragraph>
