--- a/src/app/components/site-about/site-about.component.scss
+++ b/src/app/components/site-about/site-about.component.scss
@@ -1,4 +1,6 @@
 #welcome-text {
-    font-size: 144pt;
-    margin: 0.5em 0 0 0;
+    font-weight: 200;
+    font-size: 100px;
+    line-height: 100px;
+    margin-bottom: 0.5em;
 }
