--- a/src/app/components/site-about/site-about.component.html
+++ b/src/app/components/site-about/site-about.component.html
@@ -1,6 +1,10 @@
 <div class="site-content">
-    <h1 id="welcome-text">{{ 'staticText.welcome' | translate }}</h1>
+    <h1 id="welcome-text">{{ 'staticText.welcomeMessage' | translate }}</h1>
     <app-sidelined-paragraph>
-        Lorem ipsum dolor sit amet
+        {{ 'aboutMe.description' | translate }}
     </app-sidelined-paragraph>
+
+    <div id="certs">
+
+    </div>
 </div>
