--- a/src/app/components/site-about/site-about.component.scss
+++ b/src/app/components/site-about/site-about.component.scss
@@ -1,6 +1,22 @@
+@use '@angular/material' as mat;
+
 #welcome-text {
     font-weight: 200;
     font-size: 100px;
     line-height: 100px;
     margin-bottom: 0.5em;
+}
+
+#certs {
+    width: 100%;
+    margin: 8em 2em;
+    min-height: 10em;
+}
+
+@mixin theme($theme) {
+    $color: mat.get-theme-color($theme, primary, default);
+
+    #certs {
+        border: 4px solid $color;
+    }
 }
