Add sliding-panel component

--- a/src/app/components/site-about/site-about.component.html
+++ b/src/app/components/site-about/site-about.component.html
@@ -4,6 +4,8 @@
         {{ 'aboutMe.description' | translate }}
     </app-sidelined-paragraph>
 
+    <app-sliding-panel />
+
     <div id="certs">
 
     </div>
