--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,5 +1,5 @@
-<div id="menu-container">
-    <div id="lang-switch">
+<div class="menu-container">
+    <div class="lang-switch">
         <span>EN</span>
         <mat-slide-toggle (change)="switchLanguage()" hideIcon="true" />
         <span>PL</span>
