--- a/src/app/components/site-about/site-about.component.scss
+++ b/src/app/components/site-about/site-about.component.scss
@@ -1,22 +1,40 @@
 @use '@angular/material' as mat;
 
-#welcome-text {
-    font-weight: 200;
-    font-size: 100px;
-    line-height: 100px;
-    margin-bottom: 0.5em;
-}
+.site-about {
+    margin-top: 16em;
 
-#certs {
-    width: 100%;
-    margin: 8em 2em;
-    min-height: 10em;
+    .welcome-text {
+        font-weight: 200;
+        font-size: 100px;
+        line-height: 100px;
+        margin-bottom: 0.5em;
+    }
+    
+    .certs {
+        width: calc(100% - 4em);
+        box-sizing: border-box;
+        margin: 8em 2em;
+        min-height: 10em;
+        border-radius: 2em;
+    
+        h2 {
+            margin: 1em;
+            font-size: 32px;
+            line-height: 32px;
+        }
+    
+        .certs-box {
+            display: grid;
+            padding: 2em;
+            grid-template-columns: 1fr 1fr;
+        }
+    }
 }
 
 @mixin theme($theme) {
     $color: mat.get-theme-color($theme, primary, default);
 
-    #certs {
+    .site-about .certs {
         border: 4px solid $color;
     }
 }
