--- a/src/app/components/technology-experience-marker/technology-experience-marker.component.html
+++ b/src/app/components/technology-experience-marker/technology-experience-marker.component.html
@@ -1,5 +1,5 @@
 <div class="tech-container">
-    <img [alt]="technology.title + ' logo'" [src]="technology.imagePath">
+    <img draggable="false" [alt]="technology.title + ' logo'" [src]="'./assets/images/icons/technologies/' + technology.imagePath">
 
     <div>
         <h1>{{ technology.title }}</h1>
