--- a/src/app/components/qualification-block/qualification-block.component.html
+++ b/src/app/components/qualification-block/qualification-block.component.html
@@ -9,11 +9,9 @@
 </div>
 
 <div class="edu-institution-block certificate" *ngIf="cert">
-    <div>
-        <a [href]="cert.link">
-            <img [src]="cert.iconPath" [alt]="cert.iconPath + ' icon'">
-        </a>
-    </div>
+    <a [href]="cert.link">
+        <img draggable="false" [src]="'./assets/images/icons/certs/' + cert.iconPath" [alt]="cert.iconPath + ' icon'">
+    </a>
     <div>
         <h1>{{ cert.title }}</h1>
     </div>
