--- a/src/app/components/technology-experience-marker/technology-experience-marker.component.scss
+++ b/src/app/components/technology-experience-marker/technology-experience-marker.component.scss
@@ -1,12 +1,17 @@
 .tech-container {
     margin: 1em;
-    padding: 2em;
+    padding: 20px;
     border: 1px solid #fff;
     border-radius: 1em;
     display: grid;
-    grid-template-columns: 30% 70%;
+    grid-template-columns: 20% 80%;
 
     img {
         width: 100%;
+        margin: auto;
+    }
+
+    div {
+        margin: auto 2em;
     }
 }
