--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -5,6 +5,12 @@
         <span>PL</span>
     </div>
 
-    <a routerLink="/" routerLinkActive="active" (click)="onSectionBtnClicked($event)" #selectedByDefault>about me</a>
+    <a *ngFor="let section of sections" #sectionBtn class="section-btn" [routerLink]="section.link" routerLinkActive="active" (click)="onSectionBtnClicked($event)">
+        {{ section.title }}
+    </a>
+
+    <!--<a routerLink="/" routerLinkActive="active" (click)="onSectionBtnClicked($event)" #selectedByDefault>about me</a>
     <a routerLink="/qualifications" routerLinkActive="active" (click)="onSectionBtnClicked($event)">qualifications</a>
+    <a routerLink="/projects" routerLinkActive="active" (click)="onSectionBtnClicked($event)">projects</a>
+    <a routerLink="/contact" routerLinkActive="active" (click)="onSectionBtnClicked($event)">contact</a>-->
 </div>
