--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: row;
 
-    a {
+    .section-btn {
         margin: 1em;
         font-size: 18px;
         font-weight: 400;
@@ -40,7 +40,7 @@
     $selected-color: mat.get-theme-color($theme, primary, darker);
     $text-color: mat.get-theme-color($theme, primary, default-contrast);
 
-    .menu-container > a {
+    .menu-container > .section-btn {
         color: $text-color;
         border-bottom: 2px solid $underline-color;
 
