--- a/src/app/components/project-info-block/project-info-block.component.html
+++ b/src/app/components/project-info-block/project-info-block.component.html
@@ -1,8 +1,8 @@
 <div class="project-block">
-    <img [src]="project.imagePath" [alt]="project.imagePath + ' image'" draggable="false">
+    <img [src]="'./assets/images/icons/projects/' + project.imagePath" [alt]="project.imagePath + ' image'" draggable="false">
     <div class="project-info">
         <h1>{{ project.name }}</h1>
-        <p>{{ project.description }}</p>
+        <p>{{ project.description | emojiPipe }}</p>
         <div class="technologies">
             <h2>{{ 'staticText.involvedTechnologies' | translate }}:</h2>
             <mat-chip-set class="example-chip">
