--- a/src/app/components/project-info-block/project-info-block.component.scss
+++ b/src/app/components/project-info-block/project-info-block.component.scss
@@ -8,7 +8,12 @@
     grid-template-columns: 30% 70%;
     min-height: 12em;
 
+    img {
+        width: 100%;
+    }
+
     .project-info {
+        margin: 0 2em;
         display: flex;
         flex-direction: column;
 
